# syllabus

./: prek.toml
backend/: .gitignore  example.env  justfile  main.py  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py
frontend/: justfile  package-lock.json  package.json
frontend/src/: App.tsx
